--- a/tcp-metrics/Cargo.toml
+++ b/tcp-metrics/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
+proxy-wasm = "0.1.0"
