--- a/metrics-store/singleton-queue/Cargo.toml
+++ b/metrics-store/singleton-queue/Cargo.toml
@@ -11,3 +11,5 @@ crate-type = ["cdylib"]
 
 [dependencies]
 proxy-wasm = "0.1.0"
+serde = { version = "1.0", default-features = false, features = ["derive"] }
+bincode = "1.0"
