Complete Readme.md
Signed-off-by: kanishkarj <kanishkarj@hotmail.com>

--- a/metrics-store/Makefile
+++ b/metrics-store/Makefile
@@ -5,6 +5,7 @@ build:
 deploy:
 	docker-compose up --build --remove-orphans
 
+# shows only the logs related to WASM filter/singleton
 deploy-filtered:
 	docker-compose up --build --remove-orphans | grep "\[wasm\]\|Starting"
 
