build: update build process for http_auth example
- update the build rule to use wasm-pack for optimized binaries
- update dockerfile and makefile to mount docker volume according to
  build rule
- add wasm-bindgen dependency

Signed-off-by: Rudraksh Pareek <rudrakshpareek3601@gmail.com>

--- a/http-auth/Makefile
+++ b/http-auth/Makefile
@@ -1,12 +1,26 @@
-build:
-	cargo +nightly build --target=wasm32-unknown-unknown --release 
+# check wether compiled with wasm-pack
+ifeq ($(shell test -e ./pkg/http_auth_bg.wasm && echo -n y),y)
+	WASM_PATH=./pkg/http_auth_bg.wasm
+endif
+
+# a small optimized binary without debug info, useful for releases
+build: clean
+	wasm-pack build --release
+
+# a large binary with debug info and no optimizations, useful
+# while debugging
+build-unoptimized: clean
+	cargo +nightly build --target=wasm32-unknown-unknown --release
+
+# read more about building .wasm binaries here:
+# https://rustwasm.github.io/docs/wasm-pack/commands/build.html
 
 deploy:
-	docker-compose up --build --remove-orphans
+	WASM_PATH=$(WASM_PATH) docker-compose up --build --remove-orphans
 
 # shows only the logs related to WASM filter/singleton 
 deploy-filtered:
-	docker-compose up --build --remove-orphans | grep "\[wasm\]\|Starting"
+	WASM_PATH=$(WASM_PATH) docker-compose up --build --remove-orphans | grep "\[wasm\]\|Starting"
 
 run: build deploy
 
@@ -14,3 +28,4 @@ run-filtered: build deploy-filtered
 
 clean:
 	cargo clean
+	rm -rf ./pkg
