--- a/http-auth/docker-compose.yaml
+++ b/http-auth/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       dockerfile: envoy.Dockerfile
     volumes:
       - ./envoy.yaml:/etc/envoy.yaml
-      - ./target/wasm32-unknown-unknown/release/http_auth.wasm:/etc/http_auth.wasm
+      - ${WASM_PATH:-./target/wasm32-unknown-unknown/release/http_auth.wasm}:/etc/http_auth.wasm
     networks:
       - envoymesh
     expose:
