build: update build process for tcp-packet-parse
- update the build rule to use wasm-pack for optimized binaries
- update dockerfile and makefile to mount docker volume according to
 build rule
- add wasm-bindgen dependency

Signed-off-by: Rudraksh Pareek <rudrakshpareek3601@gmail.com>

--- a/tcp-packet-parse/docker-compose.yaml
+++ b/tcp-packet-parse/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       dockerfile: envoy.Dockerfile
     volumes:
       - ./envoy.yaml:/etc/envoy.yaml
-      - ./target/wasm32-unknown-unknown/release/tcp_packet_parse.wasm:/etc/tcp_packet_parse.wasm
+      - ${WASM_PATH:-./target/wasm32-unknown-unknown/release/tcp_packet_parse.wasm}:/etc/tcp_packet_parse.wasm
     networks:
       - envoymesh
     expose:
