build: update build process for singleton-http-call
- update the build rule to use wasm-pack for optimized binaries
- update dockerfile and makefile to mount docker volume according to
 build rule
- add wasm-bindgen dependency

Signed-off-by: Rudraksh Pareek <rudrakshpareek3601@gmail.com>

--- a/singleton-http-call/docker-compose.yaml
+++ b/singleton-http-call/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       dockerfile: envoy.Dockerfile
     volumes:
       - ./envoy.yaml:/etc/envoy.yaml
-      - ./target/wasm32-unknown-unknown/release/singleton_http_call.wasm:/etc/singleton_http_call.wasm
+      - ${WASM_PATH:-./target/wasm32-unknown-unknown/release/singleton_http_call.wasm}:/etc/singleton_http_call.wasm
     networks:
       - envoymesh
     expose:
