--- a/singleton-http-call/Makefile
+++ b/singleton-http-call/Makefile
@@ -1,12 +1,24 @@
-build:
+# check wether compiled with wasm-pack
+ifeq ($(shell test -e ./pkg/singleton_http_call_bg.wasm && echo -n y),y)
+	WASM_PATH=./pkg/singleton_http_call_bg.wasm
+endif
+
+# a small optimized binary without debug info, useful for releases
+build: clean
+	wasm-pack build --release
+
+build-unoptimized: clean
 	cargo +nightly build --target=wasm32-unknown-unknown --release 
 
+# read more about building .wasm binaries here:
+# https://rustwasm.github.io/docs/wasm-pack/commands/build.html
+
 deploy:
-	docker-compose up --build --remove-orphans
+	WASM_PATH=$(WASM_PATH) docker-compose up --build --remove-orphans
 
 # shows only the logs related to WASM filter/singleton
 deploy-filtered:
-	docker-compose up --build --remove-orphans | grep "\[wasm\]\|Starting"
+	WASM_PATH=$(WASM_PATH) docker-compose up --build --remove-orphans | grep "\[wasm\]\|Starting"
 
 run: build deploy
 
@@ -14,3 +26,4 @@ run-filtered: build deploy-filtered
 
 clean:
 	cargo clean
+	rm -rf ./pkg
