build: update build process for tcp-metrics example
- update the build rule to use wasm-pack for optimized binaries
- update dockerfile and makefile to mount docker volume according to
 build rule
- add wasm-bindgen dependency

Signed-off-by: Rudraksh Pareek <rudrakshpareek3601@gmail.com>

--- a/tcp-metrics/Makefile
+++ b/tcp-metrics/Makefile
@@ -1,12 +1,21 @@
-build:
+# check wether compiled with wasm-pack
+ifeq ($(shell test -e ./pkg/tcp_metrics_bg.wasm && echo -n y),y)
+	WASM_PATH=./pkg/tcp_metrics_bg.wasm
+endif
+
+# a small optimized binary without debug info, useful for releases
+build: clean
+	wasm-pack build --release
+
+build-unoptimized: clean
 	cargo +nightly build --target=wasm32-unknown-unknown --release 
 
 deploy:
-	docker-compose up --build --remove-orphans
+	WASM_PATH=$(WASM_PATH) docker-compose up --build --remove-orphans
 
 # shows only the logs related to WASM filter/singleton
 deploy-filtered:
-	docker-compose up --build --remove-orphans | grep "\[wasm\]\|Starting"
+	WASM_PATH=$(WASM_PATH) docker-compose up --build --remove-orphans | grep "\[wasm\]\|Starting"
 
 run: build deploy
 
@@ -14,3 +23,4 @@ run-filtered: build deploy-filtered
 
 clean:
 	cargo clean
+	rm -rf ./pkg
