--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   update_release_draft:
+    if: github.repository == 'layer5io/wasm-filters'  
     runs-on: ubuntu-latest
     steps:
       - name: Drafting release
