fix: file path for tcp_metrics
Signed-off-by: felixfaisal <faisalahmedfarooq46@gmail.com>

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -39,7 +39,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: tcp_metrics_bg.wasm
-        path: ./tcp-metrics/pkg/tcp_metrics_bg
+        path: ./tcp-metrics/pkg/tcp_metrics_bg.wasm
 
     - name: Build tcp-packet-parse
       run: sh -c "cd tcp-packet-parse && wasm-pack build --release"
