fix: update artifcat name
Signed-off-by: felixfaisal <faisalahmedfarooq46@gmail.com>

--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -22,7 +22,7 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: http_auth_bg.wasm
+        name: wasm-filters.tar.gz 
         path: ./wasm-filters.tar.gz 
 
     
