--- a/.github/workflows/release-binaries.yml
+++ b/.github/workflows/release-binaries.yml
@@ -9,9 +9,9 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    outputs:
+      filenames: ${{ env.names }}
     steps:
     - uses: actions/checkout@v2
     - name: Toolchain installation
@@ -20,9 +20,18 @@ jobs:
     - name: Build binaries
       run: sh release-binaries.sh
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: wasm-filters.tar.gz 
-        path: ./wasm-filters.tar.gz 
+    - name: Set binary names to be uploaded
+      id: getname
+      run: echo "names=$(ls -1 | sed  -e 's/^/wasm-filters\//')"  >> $GITHUB_ENV
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+              ${{ needs.build.outputs.filenames }}
 
     
