--- a/singleton-http-call/envoy.yaml
+++ b/singleton-http-call/envoy.yaml
@@ -1,16 +1,28 @@
+bootstrap_extensions:
+- name: envoy.bootstrap.wasm
+  typed_config:
+    "@type": type.googleapis.com/envoy.extensions.wasm.v3.WasmService
+    singleton: true
+    config:
+      vm_config:
+        vm_id: "singleton-http-call"
+        runtime: "envoy.wasm.runtime.v8"
+        code:
+          local:
+            filename: "/etc/singleton_http_call.wasm"
 static_resources:
   listeners:
-  - name: main
-    address:
+  - address:
       socket_address:
         address: 0.0.0.0
         port_value: 80
     filter_chains:
     - filters:
-      - name: envoy.http_connection_manager
-        config:
+      - name: envoy.filters.network.http_connection_manager
+        typed_config:
+          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          codec_type: AUTO
           stat_prefix: ingress_http
-          codec_type: auto
           route_config:
             name: local_route
             virtual_hosts:
@@ -23,8 +35,9 @@ static_resources:
                 route:
                   cluster: web_service
           http_filters:
-          - name: envoy.router
-            config: {}
+          - name: envoy.filters.http.router
+            typed_config: 
+              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
   - name: staticreply
     address:
       socket_address:
@@ -32,10 +45,11 @@ static_resources:
         port_value: 8099
     filter_chains:
     - filters:
-      - name: envoy.http_connection_manager
-        config:
+      - name: envoy.filters.network.http_connection_manager
+        typed_config:
+          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
+          codec_type: AUTO
           stat_prefix: ingress_http
-          codec_type: auto
           route_config:
             name: local_route
             virtual_hosts:
@@ -50,36 +64,44 @@ static_resources:
                   body:
                     inline_string: "example body\n"
           http_filters:
-          - name: envoy.router
-            config: {}
+          - name: envoy.filters.http.wasm
+            typed_config:
+              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
+              config:
+                vm_config:
+                  vm_id: "singleton-http-call"
+                  runtime: "envoy.wasm.runtime.v8"
+                  code:
+                    local:
+                      filename: "/etc/singleton_http_call.wasm"
+          - name: envoy.filters.http.router
+            typed_config: 
+              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
   clusters:
   - name: web_service
-    connect_timeout: 0.25s
     type: STRICT_DNS
     lb_policy: round_robin
-    hosts:
-    - socket_address:
-        address: web_service
-        port_value: 5678
+    load_assignment:
+      cluster_name: web_service
+      endpoints:
+      - lb_endpoints:
+        - endpoint:
+            address:
+              socket_address:
+                address: web_service
+                port_value: 5678
   - name: wasm_upstream
-    connect_timeout: 0.25s
     type: STRICT_DNS
     lb_policy: round_robin
-    hosts:
-    - socket_address:
-        address: wasm_upstream
-        port_value: 8080
-wasm_service:
-- config:
-    name: envoy.filters.http.wasm
-    root_id: "singleton-http-call"
-    vm_config:
-      runtime: "envoy.wasm.runtime.v8"
-      code:
-        local:
-          filename: "/etc/singleton_http_call.wasm"
-      allow_precompiled: true
-  singleton: true
+    load_assignment:
+      cluster_name: wasm_upstream
+      endpoints:
+      - lb_endpoints:
+        - endpoint:
+            address:
+              socket_address:
+                address: wasm_upstream
+                port_value: 8080
 admin:
   access_log_path: "/dev/null"
   address:
