Proposing an upgrade on upstream from go1.13 to 1.19
Signed-off-by: Antonette Caldwell <pullmana8@gmail.com>

--- a/upstream/Dockerfile
+++ b/upstream/Dockerfile
@@ -1,4 +1,6 @@
-FROM golang:1.13.5 as bd
+# syntax=docker/dockerfile:1
+
+FROM golang:1.19.1 as bd
 WORKDIR /github.com/layer5io/wasm-upstream
 ADD . .
 RUN GOPROXY=direct GOSUMDB=off go build -a -o /upstream .
