--- a/.github/slack.yaml
+++ b/.github/slack.yaml
@@ -1,17 +1,36 @@
-name: Notify slack
-on: watch
+name: Slack Notify
+
+on:
+  watch:
+    types: [started]
+  issues:
+    types: [labeled]
+
 jobs:
   star-notify:
-    name: Notify slack on star
+    if: github.event_name == 'watch'
+    name: Notify Slack on star
     runs-on: ubuntu-latest
     steps:
       - name: Get current star count
         run: |
-          echo ::set-env name=STARS::$(curl --silent 'https://api.github.com/repos/layer5io/wasm-filters' -H 'Accept: application/vnd.github.preview' | jq '.watchers_count')
-      - name: Notify slack
+          echo "STARS=$(curl --silent 'https://api.github.com/repos/${{ github.repository }}' -H 'Accept: application/vnd.github.preview' | jq '.stargazers_count')" >> $GITHUB_ENV
+      - name: Notify Slack
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: pullreminders/slack-action@master
         with:
-          args: '{\"channel\":\"CSK7N9TGX\",\"text\":\"${{ github.actor }} just starred wasm-filters! (https://github.com/layer5io/wasm-filters/stargazers) Total stars: ${{env.STARS}}\"}'
-          command: echo "Now at ${{env.STARS}} stars."
+          args: '{\"channel\":\"CSK7N9TGX\",\"text\":\"${{ github.actor }} just starred ${{ github.repository }}! (https://github.com/${{ github.repository }}/stargazers) Total ⭐️: ${{ env.STARS }}\"}'
+
+  good-first-issue-notify:
+    if: github.event_name == 'issues' && (github.event.label.name == 'good first issue' || github.event.label.name == 'first-timers-only')
+    name: Notify Slack for new good-first-issue
+    runs-on: ubuntu-latest
+    steps:
+      - name: Notify Slack
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        uses: pullreminders/slack-action@master
+        with:
+          args: '{\"channel\":\"C019426UBNY\",\"type\":\"section\",\"text\":\":new: Good first issue up for grabs: ${{ github.event.issue.title }} - ${{ github.event.issue.html_url }} \"}'
+                                                                            
